# groupaffect4-devkit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGES.md  LICENSE  Makefile  README.md  environment-freemocap.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: camera_specs.json  desk_markers_large.yaml  desk_zones.json  emotibit_participants.json  emotibit_participants_by_source.example.json  lab_default.yaml  lab_small.yaml  offline_compute_stack.yaml  session_schedule.tsv  table_marker_map.yaml  text.txt  tobii_glasses_streams.yaml  tobii_multicam_glasses_tracker.example.yaml  tobii_offline_world_align.example.yaml  tobii_offline_world_align_grp12_T1.yaml  tobii_offline_world_align_grp13_T1.yaml  tobii_offline_world_align_grp13_T1_tmp.yaml  tobii_recordings_mapping.json  tobii_recordings_mapping.tsv
docs/: BIDS_PIPELINE_EXECUTION_GUIDE.md  BIDS_PIPELINE_QUICKREF.md  END_TO_END_DATASET_TO_MODELS.md  architecture.md  bfi44_personality_scores.md  bids_processing_config_guide.md  calibration_enhancements.md  calibration_usage.md  camera_layout_and_positions.md  capture_3d_p20_p50_charuco_desk_glasses.md  data_audit.md  data_flow.md  decisions.md  desk_marker_validation_example.md  dual_board_calibration_workflow.md  freemocap_quickstart.md  known_issues.md  lsl_architecture_alignment.md  mumt_final_report.md  offline_compute_stack.md  openpose_integration.md  physio_biomarker_execution_checklist.md  physio_feature_extraction_plan.md  raw_data_upload_and_bids_conversion.md  recording_sync_calibration_pipeline.md  tobii_recordings_mapping.md  (+4 more)
(+239 files in other folders)
